logs/koverse.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka/consumer'...
Listing './lib/python3.5/site-packages/kafka/coordinator'...
Listing './lib/python3.5/site-packages/kafka/coordinator/assignors'...
Listing './lib/python3.5/site-packages/kafka/metrics'...
Listing './lib/python3.5/site-packages/kafka/metrics/stats'...
Listing './lib/python3.5/site-packages/kafka/partitioner'...
Listing './lib/python3.5/site-packages/kafka/producer'...
Listing './lib/python3.5/site-packages/kafka/protocol'...
Listing './lib/python3.5/site-packages/kafka/serializer'...
Listing './lib/python3.5/site-packages/kafka/vendor'...
Listing './lib/python3.5/site-packages/kafka_python-1.3.5.dist-info'...
Listing './lib/python3.5/site-packages/koverse'...
Compiling './lib/python3.5/site-packages/koverse/client.py'...
***   File "./lib/python3.5/site-packages/koverse/client.py", line 81
    print e._message
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/koverse/spark.py'...
***   File "./lib/python3.5/site-packages/koverse/spark.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen'...
Listing './lib/python3.5/site-packages/koverse/thriftgen/addon'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/addon/AddOnService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/addon/AddOnService.py", line 342
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/admin'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/admin/AdminService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/admin/AdminService.py", line 327
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/aggregate'...
Listing './lib/python3.5/site-packages/koverse/thriftgen/application'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/application/ApplicationService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/application/ApplicationService.py", line 571
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/audit'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/audit/AuditService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/audit/AuditService.py", line 160
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/backup'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/backup/BackupService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/backup/BackupService.py", line 290
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/collection'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/collection/CollectionService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/collection/CollectionService.py", line 1871
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/dataflow'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/dataflow/DataFlowService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/dataflow/DataFlowService.py", line 4405
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/queryservice'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/queryservice/QueryService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/queryservice/QueryService.py", line 889
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/resource'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/resource/ResourceService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/resource/ResourceService.py", line 341
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse/thriftgen/security'...
Listing './lib/python3.5/site-packages/koverse/thriftgen/usergroup'...
Compiling './lib/python3.5/site-packages/koverse/thriftgen/usergroup/UserGroupService.py'...
***   File "./lib/python3.5/site-packages/koverse/thriftgen/usergroup/UserGroupService.py", line 1123
    except koverse.thriftgen.ttypes.TKoverseException, ke:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koverse-1.4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
